--- a/index.html
+++ b/index.html
@@ -688,9 +688,9 @@
 
             <div class="footer_tag">
                 <h2>Contact Us</h2>
-                <p>+91 45673 78965</p>
-                <p>quantumcoding123@gmail.com</p>
-                <p>pratiksharelekar0705@gmail.com</p>
+                <p>+91 78911-78902</p>
+                <p>21051546@kiit.ac.in</p>
+                <p>armaansaraswat1@gmail.com</p>
             </div>
 
             <div class="footer_tag">
@@ -706,7 +706,7 @@
                 <h2>SavoryDelightsHub</h2>
             </div>
         </div>
-        <p class="me">© Designed by<span><i class="fa-solid fa-face-grin"></i> Quantum Coding</span> | All rights reserved.</p>
+        <p class="me">© Designed by<span><i class="fa-solid fa-face-grin"></i> Codelikeamachine @ Armaan Saraswat</span> | All rights reserved.</p>
     </footer>
 </body>
 </html>
